refactor(zerolog): enhance zerolog to add fields with gin context
